[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/UIManager.gd" type="Script" id=1]
[ext_resource path="res://art/ui/MovementUIGraphic.PNG" type="Texture" id=2]
[ext_resource path="res://art/ui/MovementUIGraphicPressed.PNG" type="Texture" id=3]
[ext_resource path="res://art/ui/MovementUIGraphicHovered.PNG" type="Texture" id=4]
[ext_resource path="res://art/ui/MovementUIGraphicDisabled2.PNG" type="Texture" id=5]
[ext_resource path="res://art/ui/AttackUIGraphic.PNG" type="Texture" id=6]
[ext_resource path="res://art/ui/AttackUIGraphicPressed.PNG" type="Texture" id=7]
[ext_resource path="res://art/ui/AttackUIGraphicHovered.PNG" type="Texture" id=8]
[ext_resource path="res://art/ui/AttackUIGraphicDisabled2.PNG" type="Texture" id=9]
[ext_resource path="res://art/ui/EndTurnButton.png" type="Texture" id=10]
[ext_resource path="res://art/ui/EndTurnButtonClicked.png" type="Texture" id=11]
[ext_resource path="res://art/ui/EndTurnButtonHovered.png" type="Texture" id=12]
[ext_resource path="res://sound/chukka_07.wav" type="AudioStream" id=13]
[ext_resource path="res://sound/tap_04.wav" type="AudioStream" id=14]
[ext_resource path="res://sound/shizzle_07.wav" type="AudioStream" id=15]

[node name="UIManager" type="Node" index="0"]

script = ExtResource( 1 )

[node name="CommandContainer" type="Container" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 989.0
margin_top = 531.0
margin_right = 1388.0
margin_bottom = 748.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="MovementButton" type="TextureButton" parent="CommandContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 10.0
margin_right = 200.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )

[node name="AttacksButton" type="TextureButton" parent="CommandContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 11.0
margin_right = 400.0
margin_bottom = 211.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 9 )
_sections_unfolded = [ "Textures" ]

[node name="EndTurnContainer" type="Container" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1030.0
margin_top = 30.0
margin_right = 1520.0
margin_bottom = 230.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_group_": true
}

[node name="EndTurnButton" type="TextureButton" parent="EndTurnContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )
_sections_unfolded = [ "Textures" ]

[node name="EndTurnSound" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Sound Effects"

[node name="SelectAttackSound" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Sound Effects"

[node name="SelectMoveSound" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Sound Effects"


